[metadata]
name = myproject
version = 0.0.1

[flake8]
# exclude =
max-line-length = 100

[mypy]
# check strict
strict = True
# Warn unreachable
warn_unreachable = True
# Ignore 3rd party module
ignore_missing_imports = True
# avoid decoratior check
disallow_untyped_decorators = False

[options]
package = find:

